--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       class="wrapper h-128 basis-96 rounded border-white bg-white/30 p-12 shadow backdrop-blur-xl"
     >
       <section
-        class="screen rounded border-white bg-white/50 p-2 text-right text-6xl shadow backdrop-blur"
+        class="screen rounded border-white bg-white/50 pt-8 pb-2 text-right text-6xl shadow backdrop-blur"
       >
         0
       </section>
